Mostly finished with dark mode. Need to fix modals.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,7 @@
 	--primary-color: #ff8018;
 	--secondary-color: #b17309;
 	--primary-text: #323232;
+	--secondary-text: rgba(51, 51, 51, 0.87);
 	--primary-background: #ffffff;
 	--link-color: #323232;
 	--lighter-grey: #cccccc;
@@ -18,13 +19,14 @@
 	--box-shadow-lines: #0000000d;
 	--blob-start: #ffb61826;
 	--blob-end: #ffb23f03;
+	--input-bg: #ffffff;
 }
 
 .theme-dark {
-	// --primary-color: #183bff;
 	--primary-color: #ff8018;
 	--secondary-color: #b17309;
 	--primary-text: rgba(255, 255, 255, 0.87);
+	--secondary-text: rgba(255, 255, 255, 0.6);
 	--primary-background: #121212;
 	--link-color: #ffffff;
 	--lighter-grey: #cccccc;
@@ -38,6 +40,7 @@
 	--box-shadow-lines: #ffffff62;
 	--blob-start: #ffb6188a;
 	--blob-end: #ffb23f03;
+	--input-bg: rgba(255, 255, 255, 0.87);
 }
 
 @mixin blob {
@@ -456,6 +459,7 @@ body {
 			h2 {
 				position: relative;
 				padding-bottom: 30px;
+				color: var(--primary-text);
 				&.content-title:not(.no-line) {
 					font-size: 1.25rem;
 					color: var(--primary-text);
@@ -499,6 +503,7 @@ body {
 						display: flex;
 						justify-content: space-between;
 						font-size: 0.9rem;
+						color: var(--primary-text);
 
 						&:nth-child(2) {
 							margin: 1.5rem 0;
@@ -507,7 +512,7 @@ body {
 						.bg-highlighted {
 							padding: 0 0.5rem;
 							background-color: var(--primary-color);
-							color: #ffffff;
+							color: var(--primary-text);
 							font-weight: 400;
 							border-radius: 2px;
 						}
@@ -534,9 +539,11 @@ body {
 
 						h3 {
 							font-size: 1rem;
+							color: var(--primary-text);
 						}
 
 						p {
+							color: var(--secondary-text);
 							&.small-text {
 								font-size: 12px;
 								color: var(--primary-color);
@@ -647,7 +654,7 @@ body {
 							h3 {
 								font-weight: 500;
 								font-size: 1.1rem;
-								color: var(--dark-grey);
+								color: var(--primary-color);
 								padding: 0.5rem 0 0.25rem;
 							}
 							p {
@@ -683,7 +690,7 @@ body {
 						a {
 							padding: 0.5rem;
 							display: block;
-							color: var(--medium-grey);
+							color: var(--primary-text);
 							font-size: 0.9rem;
 							&.active {
 								color: var(--primary-color);
@@ -731,14 +738,14 @@ body {
 					}
 
 					h3 {
-						color: var(--dark-grey);
+						color: var(--primary-text);
 						font-size: 1.1rem;
 						font-weight: 600;
 						transition: all 0.3s ease-in-out;
 					}
 
 					p {
-						color: var(--medium-light-grey);
+						color: var(--secondary-text);
 					}
 				}
 			}
@@ -797,12 +804,6 @@ body {
 							&.read-more {
 								display: inline;
 							}
-							img {
-								// width: 100%;
-								// height: auto;
-								// transform: scale(1);
-								// max-width: 100%;
-							}
 						}
 						h3,
 						p {
@@ -812,14 +813,14 @@ body {
 						}
 
 						h3 {
-							color: var(--dark-grey);
+							color: var(--primary-text);
 							font-size: 1.1rem;
 							font-weight: 600;
 							transition: all 0.3s ease-in-out;
 						}
 
 						p {
-							color: var(--medium-light-grey);
+							color: var(--secondary-text);
 						}
 					}
 				}
@@ -835,6 +836,7 @@ body {
 				.detail {
 					display: flex;
 					justify-content: space-between;
+					color: var(--primary-text);
 					.contact-title {
 						@include title-border;
 						color: #ffffff;
@@ -859,7 +861,8 @@ body {
 						outline: 0;
 						border: 2px solid #eee;
 						margin-bottom: 30px;
-						&[type="textarea"] {
+						background-color: var(--input-bg);
+						ddd &[type="textarea"] {
 							height: 100px;
 							padding: 1rem;
 						}
@@ -868,12 +871,12 @@ body {
 					button {
 						width: 100%;
 						padding: 1.5rem 2rem;
-						background: var(--light-grey);
+						background: var(--primary-color);
 						border-radius: 5px;
 						border: none;
 						text-align: center;
 						font-size: 0.85rem;
-						color: var(--dark-grey);
+						color: #ffffff;
 						font-weight: 600;
 						cursor: pointer;
 					}
